argocd/infrastructure/istio/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: dev-local
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: mkcert
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 8080
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - name: dev-local-tls
      allowedRoutes:
        namespaces:
          from: All
